@startuml

title __ADAPTERS's Class Diagram__\n

  namespace com.example.foodonate {
    namespace home {
      namespace adapters {
        class com.example.foodonate.home.adapters.RecentActivityAdapter {
            {static} - TAG : String
            - mActivityImgs : ArrayList<Integer>
            - mActivityNames : ArrayList<String>
            - mAddresses : ArrayList<String>
            - mContext : Context
            - mDate : ArrayList<String>
            - mLogoImgs : ArrayList<Integer>
            + RecentActivityAdapter()
            + getItemCount()
            + onBindViewHolder()
            + onCreateViewHolder()
        }
      }
    }
  }
  

  namespace com.example.foodonate {
    namespace home {
      namespace adapters {
        class com.example.foodonate.home.adapters.RecentActivityAdapter.ViewHolder {
            ~ imgActivity : ImageView
            ~ imgLogo : ImageView
            ~ tvActivityName : TextView
            ~ tvAddress : TextView
            ~ tvDate : TextView
            + ViewHolder()
        }
      }
    }
  }
  

  namespace com.example.foodonate {
    namespace home {
      namespace adapters {
        class com.example.foodonate.home.adapters.RowItemAdapter {
            {static} - TAG : String
            - mAddresses : ArrayList<String>
            - mContext : Context
            - mImages : ArrayList<Integer>
            - mNames : ArrayList<String>
            + RowItemAdapter()
            + getItemCount()
            + onBindViewHolder()
            + onCreateViewHolder()
        }
      }
    }
  }
  

  namespace com.example.foodonate {
    namespace home {
      namespace adapters {
        class com.example.foodonate.home.adapters.RowItemAdapter.ViewHolder {
            ~ itemImage : ImageView
            ~ tvAddress : TextView
            ~ tvName : TextView
            + ViewHolder()
        }
      }
    }
  }
  

  com.example.foodonate.home.adapters.RecentActivityAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.foodonate.home.adapters.RecentActivityAdapter +-down- com.example.foodonate.home.adapters.RecentActivityAdapter.ViewHolder
  com.example.foodonate.home.adapters.RecentActivityAdapter.ViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.example.foodonate.home.adapters.RowItemAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.example.foodonate.home.adapters.RowItemAdapter +-down- com.example.foodonate.home.adapters.RowItemAdapter.ViewHolder
  com.example.foodonate.home.adapters.RowItemAdapter.ViewHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
